* Updated the tutorial projects to take advantage of the latest features in PowerMock.
* Fixed a NPE bug in the AbstractTestClassExtractor.isPrepared(..) method.
* The test class is no longer recommended as a PrepareForTest candidate if a NPE occurs inside the test class.

Change log 0.9 (released 2008-11-10)
------------------------------------
* Structural refactoring to remove Structure 101 XS: moved WhiteBox implementation to separate class in core and moved IndicateReloadClass
* By default Whitebox.getInternalState and Whitebox.setInternalState now traverses the class hierarchy when looking for a field.
* Better error message if a NPE is caught in a subclass of a class being prepared for test.
* The PrepareForTest annotation now manipulates the full (super) class hierachy by default. This makes it easier to perform mocking of super class methods.
* A new annotation called PrepareOnlyThisForTest has been added and works in the same way that PrepareForTest previously did, i.e. ONLY the specified classes are prepared and not the entire hierarchy.
* Fixed a bug that made it impossible to invoke vararg constructors.
* createMockAndExpectNew now takes expected arguments as the second parameter.
* expectNew takes expected arguments as the second parameter.
* Invocations of var arg methods, constructors and expectPrivate now works for sub-types of the declared parameter types.
* More consistent error messages when expectNew fails. Error messages now takes the parameters into account.
* Renamed mockStaticMethodX to mockStaticPartialX
* Added javadoc to the release phase
* The JUnit4 legacy runner now throws NoTestsRemainException if no tests are found in the test case. 
* All JUnit4 runners now executes the setUp method before each test and the tearDown method after each test if the test class extends from TestCase.